# network

./: Cargo.toml  foxing.scn.ron  joe.scn.ron  john.scn.ron  mod.dot  test.level  wasm-build
assets/config/: config.game.toml
assets/levels/: test.lvl.ron
assets/levels/mvp/: mvp.glb  mvp.lvl.ron  mvp.scn.ron
assets/levels/navmeshing/: navmeshing.glb  navmeshing.lvl.ron  navmeshing.scn.ron
assets/levels/test/: test.glb  test.lvl.ron  test.scn.ron
assets/levels/testtwo/: testtwo.glb  testtwo.lvl.ron  testwo.glb
assets/models/: Default.glb  Default.gltf  character.glb  character.gltf
assets/models/hat/: tophat.glb
assets/models/level/: leveltest.glb
assets/prefabs/: joe.scn.ron  test.scn.ron
assets/scenes/: test.glb
data/chat_input/: input.txt
resources/: apartment_elevator.blend  character.blend  test.blend
src/: audio.rs  bevy_config.rs  dev.rs  file_system_interaction.rs  level_instantiation.rs  lib.rs  main.rs  menu.rs  movement.rs  network.rs  particles.rs  player_control.rs  rendering.rs  util.rs  world_interaction.rs
src/accessories/: builders.rs  enums.rs  mod.rs
src/audio/: bgm.rs  mod.rs
src/bundles/: mod.rs
src/character/: dialogue.rs  mod.rs  mover.rs  npc.rs
src/chat/: mod.rs
src/config/: mod.rs
src/dev/: dev_editor.rs  dev_types.rs
src/file_system_interaction/: asset_loading.rs  config.rs  flags.rs  game_state_serialization.rs  level_serialization.rs  users.rs
src/input/: mod.rs
src/inventory/: key.rs  mod.rs
src/level_instantiation/: level.rs  map.rs  spawning.rs
src/level_instantiation/spawning/: animation_link.rs  mod.rs  post_spawn_modification.rs
src/load/: load_manager.rs  mod.rs
src/main_menu/: mod.rs
src/material/: mod.rs
src/movement/: general_movement.rs  navigation.rs  physics.rs
src/movement/general_movement/: components.rs
src/network/: chatbot.rs  mod.rs  network_main.rs  world_controller.rs
src/particles/: init.rs
src/physics/: mod.rs
src/player/: mod.rs  player_controller.rs
src/player_control/: action_handler.rs  actions.rs  camera.rs  player_embodiment.rs
src/player_control/camera/: first_person.rs  (+3 more)
src/recording/: input.rs  mod.rs
src/ui/: analyse.rs  chat.rs  equip.rs  load_screen.rs  main.rs  map.rs  mapui.rs  mod.rs  raceui.rs  voices.rs
src/utils/: mod.rs  print.rs
src/voices/: mod.rs
src/world_interaction/: dialog.rs  level_anim.rs  spawnpoint.rs  textbox.rs
src/world_obj/: mod.rs  racetimer.rs
(+31 files in other folders)
