[package]
name = "network"
version = "0.1.0"
edition = "2021"

[target.wasm32-unknown-unknown]
bevy = {version = "0.9.1", default-features = false, features = [ "bevy_audio" ]}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy_rapier3d]
opt-level = 3

[dependencies]
anyhow = "1.0.68"
bevy = { version = "0.9.1", features = [ "bevy_audio" ] }
bevy-inspector-egui = "0.17.0"
bevy_editor_pls = "0.2.0"
bevy_framepace = "0.11.0"
bevy_gltf = "0.9.1"
bevy_rapier3d = "0.20.0"
compose = "0.1.0"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = "1.0.152"
